# Core

./: README.md  gunicorn_conf.py  pyproject.toml
src/: config.py  main.py
src/auth/: authentication.py
src/connection/: manager.py
src/core/: job.py
src/database/: connection.py  orm.py
src/models/: __init__.py  angles.py  logs.py  users.py
src/repositories/: log_repository.py  user_repository.py
src/routers/: dashboard.py  textneck.py  users.py
src/routes/: angles.py  users.py
src/schemas/: __init__.py  angles.py  logs.py  options.py  users.py
src/services/: core.py  dashboard.py  websocket_manager.py
src/utils/: auth.py  logging.py
src/workers/: app.py  worker.py  worker_manager.py  worker_pool.py
